# Multi-Agent

./: .env.example  .gitignore  AGENTS.md  AGENT_REPORT.md  CLAUDE.md  DEMO_APP_RESULT.md  DEMO_CHECKLIST.md  DEMO_QUERIES.md  DEMO_SCRIPT.md  FINAL_RELEASE_AUDIT.md  FRESH_CLONE_CHECK.md  FRESH_CLONE_VERIFICATION.md  NEXT_STEP.md  NOTICE.md  PHASE_LOG.md  README.md  RELEASE_AUDIT.md  RELEASE_NOTES.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_assets.py  routes_auto.py  routes_eval.py  routes_health.py  routes_ingestion.py  routes_search.py
backend/app/core/: config.py  errors.py
backend/app/db/: crud.py  models.py  postgres.py  qdrant.py
backend/app/ingestion/: audio_processor.py  image_processor.py  text_processor.py  video_processor.py
backend/app/models/: asr.py  captioning.py  embedding.py  object_detection.py  ocr.py
backend/app/schemas/: asset.py  auto.py  eval.py  evidence.py  ingestion.py  search.py
backend/app/search/: composer.py  fusion.py  query_planner.py  retrievers.py  service.py  temporal.py  validator.py
backend/app/storage/: local.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_answer_composer.py  test_api_search.py  test_assets_api.py  test_audio_text_ingestion.py  test_auto_search.py  test_crud.py  test_db_models.py  test_evaluation_metrics.py  test_fusion.py  test_health.py  test_image_ingestion.py  test_ingestion.py  test_query_planner.py  test_retrievers.py  test_search_validator.py  test_video_ingestion.py
src/: cli.ts  (+4 more)
(+167 files in other folders)
